Closed Bug 117564 Opened 24 years ago Closed 23 years ago

[FIX]highlighting elements is wigged out by complex css positioned items

Categories

(Other Applications :: DOM Inspector, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.2alpha

People

(Reporter: Morten, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

load 4th-age.com, and inspect it with the DOM Inspector (sidebar) as you click nodes, a red square is painted on the web page to show what the node is. good example: body/table.b/tbody - the red square comes up far below the table. selecting the table node displays it correctly. select the tbody childnodes for more irregularities
Status: NEW → ASSIGNED
Target Milestone: --- → Future
DOM Inspector is behaving nowadays... yay!
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
bah. I spoke a bit too soon... It wasn't entirely fine, but much better... the highlighting does the right thing until I get to the tbody of the tables on the site. well, it's good to see things progress :)
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
I can confirm this with the DOM inspector for Build 2002052106, WinNT4. Found this on a table within a relatively positioned div. The coutours of the DIV are marked correlctly, but all containing elements are offset to the lower right. Each following element (nested or not) suffers from this offset. HTH, Joe
taking. Christopher, care to review?
Assignee: hewitt → bzbarsky
Status: REOPENED → NEW
Priority: -- → P1
Summary: highlighting elements is wigged out by complex css positioned items → [FIX]highlighting elements is wigged out by complex css positioned items
Target Milestone: Future → mozilla1.2alpha
Comment on attachment 93799 [details] [diff] [review] Patch to fix -- get offsets from views correctly r=caillon
Attachment #93799 - Flags: review+
Comment on attachment 93799 [details] [diff] [review] Patch to fix -- get offsets from views correctly sr=hewitt
Attachment #93799 - Flags: superreview+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
verifying
Status: RESOLVED → VERIFIED
Product: Core → Other Applications
QA Contact: timeless → dom-inspector
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: