Bug 117564.  Make Inspector flash the right spot when things are positioned.  r=caillon, sr=hewitt.